[package]
name = "hello_world"
version = "0.1.0"
authors = ["yikezawa <y.ikezawa93@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.5"
tokio = { version = "0.2.21", features = ["macros"] }
async-std = { version = "1.6.1", features = ["attributes"] }
async-trait = "0.1.40"